corrected email in README

--- a/README
+++ b/README
@@ -38,4 +38,4 @@ indirect adressing is needed, two
 routines, one axpy and one dotprodukt routine.
 
 
----- J. Behrens, joern.behrens@zmaw.de
+---- J. Behrens, joern.behrens@uni-hamburg.de
